fix bad service definition and dupe constant

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,6 +5,6 @@ services:
     markup_wistia.twig.wistia:
         class: Markup\WistiaBundle\Twig\WistiaExtension
         arguments:
-            - @markup_wista
+            - @markup_wistia
         tags:
             - { name: twig.extension }
