Catch wista media lookup failure and log failure

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -6,5 +6,6 @@ services:
         class: Markup\WistiaBundle\Twig\WistiaExtension
         arguments:
             - @markup_wistia
+            - @logger
         tags:
             - { name: twig.extension }
