--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
         "twig/twig": ">=1.12",
         "php": ">=5.4.0",
         "guzzlehttp/guzzle": "~4.0",
-        "psr/cache": "dev-master"
+        "psr/cache-implementation": "1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "mockery/mockery": "0.9.0"
+        "mockery/mockery": "0.9.0",
+        "egils/cache": ">=0.1"
     },
     "repositories": [
         {
