--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "mockery/mockery": "0.9.0",
+        "mockery/mockery": "~0.9",
         "egils/cache": ">=0.1"
     },
     "repositories": [
