--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "psr/cache-implementation": "1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*",
+        "phpunit/phpunit": "~4.5",
         "mockery/mockery": "~0.9",
         "egils/cache": ">=0.1"
     },
