quote service references in YAML configs

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,7 +5,7 @@ services:
     markup_wistia.twig.wistia:
         class: Markup\WistiaBundle\Twig\WistiaExtension
         arguments:
-            - @markup_wistia
-            - @logger
+            - '@markup_wistia'
+            - '@logger'
         tags:
             - { name: twig.extension }
